--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <a href="webs/download.html" class="main4_dc_button_a">
                     <div class="main4_5_dc_button">Download On Desktop💻</div>
                 </a>
-                <a href="https://www.mediafire.com/file/d5igdshgvne93if/Alyn_V11.zip/file?dkey=ysazoyqr6lg&r=568" class="main4_dc_button_a">
+                <a href="https://play.google.com/store/apps/details?id=ru.unisamp_mobile.launcher&hl=en_US" class="main4_dc_button_a">
                     <div class="main4_5_dc_button">Download On Mobile📱</div>
                 </a>
               </div>
