--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           });
         </script>
 <audio id="background-music" autoplay loop>
-  <source src="./media/intro.mp3" type="audio/mpeg">
+  <source src="./media/intr1.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
 
