--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
             <img class="main5_supporters_img" alt="supporters member img" src="media/member_placeholder.webp">
             <div class="main5_supporters_description_div">
               <a class="main5_supporters_description_rank main5_supporters_description_rank_supporter">[Head Admin]</a>
-              <a class="main5_supporters_description_title" href="webs/error.html">@_Deltanp and @snagxer_</a>
-              <a class="main5_supporters_description">Head admin<br>It will be one soon</a>
+              <a class="main5_supporters_description_title" href="webs/error.html">@snagxer_</a>
+              <a class="main5_supporters_description">Head admin<br>Ig and Dc Both</a>
             </div>
           </div>
         </div>
