--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <a href="https://www.sa-mp.mp/downloads/" class="desktop_navbar_link" target="_blank">SAMP</a>
       <a href="#discord" class="desktop_navbar_link scroll">Community</a>
       <a href="#about" class="desktop_navbar_link scroll">About Us</a>
+      <a href="https://youtu.be/cLrw_N0WPj4?si=OZN_78-KuCNiuEOM" class="desktop_navbar_link">Server Trailer</a>
       <a href="webs/cfx.html" class="desktop_navbar_link">Connect</a>
       <a href="webs/rules.html" class="desktop_navbar_link">Rules</a>
       <div class="desktop_navbar_link2_div">
@@ -29,6 +30,7 @@
           <a class="mobile_navbar_link" onclick="mobile_navbar_link_hider()" href="https://www.sa-mp.mp/downloads/" target="_blank">SAMP</a>
           <a class="mobile_navbar_link scroll" onclick="mobile_navbar_link_hider()" href="#discord">Community</a>
           <a class="mobile_navbar_link scroll" onclick="mobile_navbar_link_hider()" href="#about">About Us</a>
+          <a class="mobile_navbar_link" onclick="mobile_navbar_link_hider()" href="https://youtu.be/cLrw_N0WPj4?si=OZN_78-KuCNiuEOM" >Server Trailer</a>
           <a class="mobile_navbar_link" onclick="mobile_navbar_link_hider()" href="webs/cfx.html" >Connect</a>
           <a class="mobile_navbar_link" onclick="mobile_navbar_link_hider()" href="webs/rules.html" >Rules</a>
           <a class="mobile_navbar_link scroll" onclick="mobile_navbar_link_hider()" href="#join">Internet Protocol</a>
