--- a/webs/cfx.html
+++ b/webs/cfx.html
@@ -22,10 +22,10 @@
     <main>
         <section>
             <img src="https://servers-live.fivem.net/servers/icon/qykjm4/-1214152157.png" alt="Server Icon">
-            <h1 title="Roleplay">Nepali City RolePlay | Group Jobs | Highly Optimized | Serious Roleplay | Join Us @ https://discord.gg/city | Made With ❤ Love</h1>
+            <h1 title="Roleplay">Nepali City RolePlay | Group Jobs | Highly Optimized | Serious Roleplay | Join Us @https://dsc.gg/ncrps1 | Made With ❤ Love</h1>
         </section>
         <aside>
-            <span class="url"><span class="material-icons">link</span> <a href="samp://123.123.123:7777">SOON</a></span>
+            <span class="url"><span class="material-icons">link</span> <a href="4.213.165.238:25580">4.213.165.238:25580</a></span>
         </aside>
     </main>
     <div class="cookie-consent">
