--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <div class="main1_ipcopier_div">
           <button class="main1_ipcopier" onclick="copyText()" type="button">
-            <span class="main1_ipcopier_text1">SOON</span>
+            <span class="main1_ipcopier_text1">4.213.165.238:25580</span>
             <br>
             <span class="main1_ipcopier_text2">Click to copy</span>
           </button>
@@ -243,7 +243,7 @@
                 <a>IP:</a>
               </div>
               <div class="main3_join_values">
-                <a>SOON</a>
+                <a>4.213.165.238:25580</a>
               </div>
             </div>
           </div>
@@ -255,8 +255,8 @@
                 <a>Port:</a>
               </div>
               <div class="main3_join_values">
-                <a>SOON</a>
-                <a>SOON</a>
+                <a>4.213.165.238:25580</a>
+                <a>25580</a>
               </div>
             </div>
           </div>
