--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <div class="main1_ipcopier_div">
           <button class="main1_ipcopier" onclick="copyText()" type="button">
-            <span class="main1_ipcopier_text1">4.213.165.238:25580</span>
+            <span class="main1_ipcopier_text1">inode.infinitypanel.online:25580</span>
             <br>
             <span class="main1_ipcopier_text2">Click to copy</span>
           </button>
@@ -185,7 +185,7 @@
             <div class="main5_admins_description_div">
               <a class="main5_admins_description_rank main5_admins_description_rank_owner">[CEO]</a>
               <a class="main5_admins_description_title" href="webs/error.html">Kismat Gurung</a>
-              <a class="main5_admins_description">Ceo<br>Offline Currently</a>
+              <a class="main5_admins_description">Ceo<br>Online Currently</a>
             </div>
           </div>
           <div class="main5_admins_div main5_admins_dev_type1">
@@ -243,7 +243,7 @@
                 <a>IP:</a>
               </div>
               <div class="main3_join_values">
-                <a>4.213.165.238:25580</a>
+                <a>inode.infinitypanel.online:25580</a>
               </div>
             </div>
           </div>
@@ -255,7 +255,7 @@
                 <a>Port:</a>
               </div>
               <div class="main3_join_values">
-                <a>4.213.165.238:25580</a>
+                <a>inode.infinitypanel.online</a>
                 <a>25580</a>
               </div>
             </div>
