--- a/webs/cfx.html
+++ b/webs/cfx.html
@@ -25,7 +25,7 @@
             <h1 title="Roleplay">Nepali City RolePlay | Group Jobs | Highly Optimized | Serious Roleplay | Join Us @https://dsc.gg/ncrps1 | Made With ❤ Love</h1>
         </section>
         <aside>
-            <span class="url"><span class="material-icons">link</span> <a href="samp://inode.infinitypanel.online:25580">inode.infinitypanel.online:25580</a></span>
+            <span class="url"><span class="material-icons">link</span> <a onclick="copyText()" href="samp://inode.infinitypanel.online:25580">inode.infinitypanel.online:25580</a></span>
         </aside>
     </main>
     <div class="cookie-consent">
