--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <div class="main1_ipcopier_div">
           <button class="main1_ipcopier" onclick="copyText()" type="button">
-            <span class="main1_ipcopier_text1">inode.infinitypanel.online:25580</span>
+            <span class="main1_ipcopier_text1">Server had been shutdown</span>
             <br>
             <span class="main1_ipcopier_text2">Click to copy</span>
           </button>
@@ -255,8 +255,8 @@
                 <a>Port:</a>
               </div>
               <div class="main3_join_values">
-                <a>inode.infinitypanel.online</a>
-                <a>25580</a>
+                <a>Offline</a>
+                <a>Currently</a>
               </div>
             </div>
           </div>
