--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 <a>IP:</a>
               </div>
               <div class="main3_join_values">
-                <a>inode.infinitypanel.online:25580</a>
+                <a>Server is Offline</a>
               </div>
             </div>
           </div>
