--- a/webs/rules.html
+++ b/webs/rules.html
@@ -113,7 +113,7 @@
     </div>
     <footer class="footer">
         <div class="footer-bottom">
-            <p href="https:discord.gg/uSCbF5UUaa" class="footer-bottom-text">Made by Sebastian Varkey | Powered By God Dc Developer</p>
+            <p href="https:discord.gg/uSCbF5UUaa" class="footer-bottom-text">Made by Satish Bhattrai | Powered By NCRP DC</p>
         </div>
     </footer>
 
