--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <img class="main5_admins_img" alt="admin member img" src="media/member_placeholder copy.webp">
             <div class="main5_admins_description_div">
               <a class="main5_admins_description_rank main5_admins_description_rank_admin">[Owner]</a>
-              <a class="main5_admins_description_title" href="webs/error.html">Satish Bhattrai</a>
+              <a class="main5_admins_description_title" href="https://www.instagram.com/satish_bhattrai/">Satish Bhattrai</a>
               <a class="main5_admins_description">Owner<br>one and only Owner/Founder</a>
             </div>
           </div>
