--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <img class="main5_supporters_img" alt="supporters member img" src="media/member_placeholder copy 2.webp">
             <div class="main5_supporters_description_div">
               <a class="main5_supporters_description_rank main5_supporters_description_rank_supporter">[Management]</a>
-              <a class="main5_supporters_description_title" href="webs/error.html">NCRP TEAM</a>
+              <a class="main5_supporters_description_title" href="webs/error.html">delts_plays</a>
               <a class="main5_supporters_description">NCRP Management<br>Staff Team</a>
             </div>
           </div>
