--- a/webs/download.html
+++ b/webs/download.html
@@ -23,7 +23,7 @@
       <h1>NEPALI CITY RP</h1>
       <p>Download Game File and the Multiplayer Launcher</p>
       <a href="https://www.mediafire.com/file/480esq9xu42v2qa/ncrp+file.rar/file" class="main4_dc_button"><button>Download Multiplayer Launcher</button></a>
-      <a href="https://www.mediafire.com/file/rs0kad5beyjdznz/Ncrp+Game+File.rar/file" class="main4_dc_button"><button>Download Game File</button></a>
+      <a href="https://drive.google.com/file/d/1xfLJWCQzo21Ob0v64y5i69DDddMt0Jmo/view" class="main4_dc_button"><button>Download Game File</button></a>
     </span>
   </div>
 
