--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <img class="main5_supporters_img" alt="supporters member img" src="media/member_placeholder copy 3.webp">
             <div class="main5_supporters_description_div">
               <a class="main5_supporters_description_rank main5_supporters_description_rank_supporter">[Head Coordinator]</a>
-              <a class="main5_supporters_description_title" href="webs/error.html">NCRP TEAM</a>
+              <a class="main5_supporters_description_title" href="https://www.instagram.com/bibu.ed/">B I B U</a>
               <a class="main5_supporters_description">Head Coordinator<br>Curently staff team</a>
             </div>
           </div>
