--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <img class="main5_supporters_img" alt="supporters member img" src="media/member_placeholder copy 4.webp">
             <div class="main5_supporters_description_div">
               <a class="main5_supporters_description_rank main5_supporters_description_rank_supporter">[Developer]</a>
-              <a class="main5_supporters_description_title" href="webs/error.html">Satish Bhattrai</a>
+              <a class="main5_supporters_description_title" href="https://www.youtube.com/@Satishplayz89">Satish Bhattrai</a>
               <a class="main5_supporters_description">Developer<br>Solo Developer</a>
             </div>
           </div>
@@ -226,7 +226,7 @@
             <img class="main5_supporters_img" alt="supporters member img" src="media/member_placeholder.webp">
             <div class="main5_supporters_description_div">
               <a class="main5_supporters_description_rank main5_supporters_description_rank_supporter">[Head Admin]</a>
-              <a class="main5_supporters_description_title" href="webs/error.html">@snagxer_</a>
+              <a class="main5_supporters_description_title" href="webs/error.html">snagxer_</a>
               <a class="main5_supporters_description">Head admin<br>Ig and Dc Both</a>
             </div>
           </div>
